# covid-tracking-shim

./: .gitignore  pyproject.toml
.github/workflows/: cron.yml
covid/: cli.py
