[tool.poetry]
name = "covid"
version = "0.1.0"
description = "A collection of tools for The Policy Lab's COVID response"
authors = ["The Policy Lab"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.25.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^5.7.0"

[tool.poetry.scripts]
covid = "covid.cli:cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
